--- a/.eslintrc
+++ b/.eslintrc
@@ -3,7 +3,8 @@
 
   "extends": [
     "airbnb",
-    "plugin:flowtype/recommended"
+    "plugin:flowtype/recommended",
+    "prettier"
   ],
 
   "env": {
@@ -13,12 +14,18 @@
 
   "plugins": [
     "mocha",
-    "flowtype"
+    "flowtype",
+    "prettier"
   ],
 
   "rules": {
     "flowtype/define-flow-type": 1,
-    "react/prefer-stateless-function": 0
+    "jsx-a11y/href-no-hash": 0,
+    "react/jsx-wrap-multilines": 0,
+    "react/jsx-indent": 0,
+    "react/jsx-indent-props": 0,
+    "react/jsx-closing-bracket-location": 0,
+    "prettier/prettier": "error"
   },
 
   "settings": {
