--- a/package.json
+++ b/package.json
@@ -1,5 +1,7 @@
 {
   "license": "MIT",
+  "name": "jsapp-boilerplate",
+  "version": "0.0.1",
   "scripts": {
     "build": "webpack --progress --config webpack.config.js",
     "lint": "yarn run flow && yarn run eslint && yarn run stylelint",
