--- a/package.json
+++ b/package.json
@@ -20,8 +20,10 @@
     "deploy:github": "yarn clean && yarn build:github && yarn deploy:github:prebuilt",
     "dev:nohot": "yarn d:nohot",
     "dev": "yarn d",
-    "lint:eslint:fix": "yarn lint:eslint --fix",
-    "lint:eslint": "eslint . --ext .js --ext .jsx --ext .ts --ext .tsx",
+    "lint:eslint:fix": "yarn lint:eslint --fix && lint:eslint:js --fix",
+    "lint:eslint": "yarn lint:eslint:ts && yarn lint:eslint:js",
+    "lint:eslint:ts": "eslint . --ext .ts --ext .tsx",
+    "lint:eslint:js": "eslint .  --no-eslintrc --config .eslintrc.javascript.js --ext .js --ext .jsx",
     "lint:fix": "yarn lint:eslint:fix && yarn lint:stylelint:fix",
     "lint:stylelint:fix": "yarn lint:stylelint --fix",
     "lint:stylelint": "stylelint '**/*.css' '**/*.scss' '**/*.pcss'",
@@ -34,8 +36,8 @@
     "test:watch": "yarn t:w",
     "test": "yarn t",
     "tsc:check-config": "tsc config/configValues.js --noEmit --skipLibCheck --allowJs --checkJs --lib es2016",
-    "tsc:check:no-error": "tsc --noEmit --skipLibCheck || true",
-    "tsc:check": "tsc --noEmit --skipLibCheck && yarn tsc:check-config"
+    "tsc:check:no-error": "tsc --noEmit --skipLibCheck --pretty || true",
+    "tsc:check": "tsc --noEmit --skipLibCheck --pretty --strict && yarn tsc:check-config"
   },
   "dependencies": {
     "@reduxjs/toolkit": "^1.3.5",
