--- a/package.json
+++ b/package.json
@@ -38,63 +38,63 @@
     "tsc:check": "tsc --noEmit --skipLibCheck && yarn tsc:check-config"
   },
   "dependencies": {
-    "@reduxjs/toolkit": "^1.3.5",
+    "@reduxjs/toolkit": "^1.4.0",
     "classnames": "^2.2.6",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "react-redux": "^7.2.0",
-    "react-router": "^5.1.2",
-    "react-router-dom": "^5.1.2",
+    "react-redux": "^7.2.1",
+    "react-router": "^5.2.0",
+    "react-router-dom": "^5.2.0",
     "redux": "^4.0.5",
     "redux-thunk": "^2.2.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.9.6",
-    "@babel/plugin-proposal-class-properties": "^7.8.3",
-    "@babel/plugin-proposal-object-rest-spread": "^7.9.6",
+    "@babel/core": "^7.11.6",
+    "@babel/plugin-proposal-class-properties": "^7.10.4",
+    "@babel/plugin-proposal-object-rest-spread": "^7.11.0",
     "@babel/plugin-syntax-dynamic-import": "^7.8.3",
-    "@babel/polyfill": "^7.8.7",
-    "@babel/preset-env": "^7.9.6",
-    "@babel/preset-react": "^7.9.4",
-    "@babel/preset-typescript": "^7.9.0",
-    "@pmmmwh/react-refresh-webpack-plugin": "^0.3.0-beta.5",
+    "@babel/polyfill": "^7.11.5",
+    "@babel/preset-env": "^7.11.5",
+    "@babel/preset-react": "^7.10.4",
+    "@babel/preset-typescript": "^7.10.4",
+    "@pmmmwh/react-refresh-webpack-plugin": "^0.4.2",
     "@types/classnames": "^2.2.10",
-    "@types/enzyme": "^3.10.5",
+    "@types/enzyme": "^3.10.7",
     "@types/enzyme-adapter-react-16": "^1.0.6",
-    "@types/jest": "^25.2.1",
-    "@types/react": "^16.9.34",
-    "@types/react-dom": "^16.9.7",
-    "@types/react-redux": "^7.1.7",
+    "@types/jest": "^26.0.14",
+    "@types/react": "^16.9.49",
+    "@types/react-dom": "^16.9.8",
+    "@types/react-redux": "^7.1.9",
     "@types/react-router-dom": "^5.1.5",
     "@types/redux-mock-store": "^1.0.2",
-    "@types/webpack-env": "^1.15.2",
-    "@typescript-eslint/eslint-plugin": "^2.30.0",
-    "@typescript-eslint/parser": "^2.30.0",
-    "autoprefixer": "^9.7.6",
+    "@types/webpack-env": "^1.15.3",
+    "@typescript-eslint/eslint-plugin": "^4.2.0",
+    "@typescript-eslint/parser": "^4.2.0",
+    "autoprefixer": "^10.0.0",
     "babel-eslint": "^10.1.0",
-    "babel-jest": "^25.5.1",
+    "babel-jest": "^26.3.0",
     "babel-loader": "^8.1.0",
     "circular-dependency-plugin": "^5.2.0",
-    "compression-webpack-plugin": "^3.1.0",
+    "compression-webpack-plugin": "^6.0.2",
     "connect-history-api-fallback": "^1.6.0",
     "cross-env": "^7.0.2",
     "css-loader": "^3.5.3",
     "cssnano": "^4.1.10",
     "enzyme": "^3.11.0",
-    "enzyme-adapter-react-16": "^1.15.2",
-    "eslint": "^6.8.0",
+    "enzyme-adapter-react-16": "^1.15.5",
+    "eslint": "^7.9.0",
     "eslint-config-prettier": "^6.11.0",
-    "eslint-import-resolver-webpack": "^0.12.1",
-    "eslint-plugin-import": "^2.20.2",
-    "eslint-plugin-jest": "^23.9.0",
-    "eslint-plugin-jsx-a11y": "^6.2.3",
-    "eslint-plugin-prettier": "^3.1.3",
-    "eslint-plugin-react": "^7.19.0",
-    "eslint-plugin-react-hooks": "^4.0.0",
-    "file-loader": "^6.0.0",
-    "gh-pages": "^2.2.0",
-    "html-webpack-plugin": "^4.3.0",
-    "jest": "^25.5.4",
+    "eslint-import-resolver-webpack": "^0.12.2",
+    "eslint-plugin-import": "^2.22.0",
+    "eslint-plugin-jest": "^24.0.2",
+    "eslint-plugin-jsx-a11y": "^6.3.1",
+    "eslint-plugin-prettier": "^3.1.4",
+    "eslint-plugin-react": "^7.21.1",
+    "eslint-plugin-react-hooks": "^4.1.2",
+    "file-loader": "^6.1.0",
+    "gh-pages": "^3.1.0",
+    "html-webpack-plugin": "^4.5.0",
+    "jest": "^26.4.2",
     "jest-fetch-mock": "^3.0.3",
     "jest-transform-stub": "^2.0.0",
     "postcss-loader": "^3.0.0",
@@ -102,23 +102,26 @@
     "postcss-preset-env": "^6.7.0",
     "postcss-reporter": "^6.0.1",
     "preload-webpack-plugin": "^3.0.0-beta.4",
-    "prettier": "^2.0.5",
-    "prettier-eslint": "^9.0.1",
-    "react-refresh": "^0.8.2",
+    "prettier": "^2.1.2",
+    "prettier-eslint": "^11.0.0",
+    "react-refresh": "^0.8.3",
     "redux-mock-store": "^1.5.4",
     "style-loader": "^1.2.1",
-    "stylelint": "^13.3.3",
-    "stylelint-config-prettier": "^8.0.1",
+    "stylelint": "^13.7.1",
+    "stylelint-config-prettier": "^8.0.2",
     "stylelint-prettier": "^1.1.2",
-    "typescript": "^3.8.3",
-    "webpack": "^4.43.0",
-    "webpack-bundle-analyzer": "^3.7.0",
-    "webpack-cli": "^3.3.11",
-    "webpack-dev-server": "^3.10.3",
+    "typescript": "^4.0.3",
+    "webpack": "^4.44.2",
+    "webpack-bundle-analyzer": "^3.9.0",
+    "webpack-cli": "^3.3.12",
+    "webpack-dev-server": "^3.11.0",
     "webpack-shell-plugin": "^0.5.0"
   },
   "resolutions": {
-    "//": "yargs-parser: https://nodesecurity.io/advisories/1500",
-    "yargs-parser": "^18.1.2"
+    "//": "When yarn audit fails due to a child dependency, you can override versions here",
+    "elliptic": "6.5.3",
+    "http-proxy": ">=1.18.1",
+    "lodash": ">=4.17.19",
+    "serialize-javascript": ">=3.1.0"
   }
 }
