--- a/package.json
+++ b/package.json
@@ -33,8 +33,8 @@
     "test:watch": "yarn t:w",
     "test": "yarn t",
     "tsc:check-config": "tsc config/configValues.js --noEmit --skipLibCheck --allowJs --checkJs --lib es2016",
-    "tsc:check:no-error": "tsc --noEmit --skipLibCheck || true",
-    "tsc:check": "tsc --noEmit --skipLibCheck && yarn tsc:check-config"
+    "tsc:check:no-error": "tsc --noEmit --incremental --skipLibCheck || true",
+    "tsc:check": "tsc --noEmit --incremental --skipLibCheck && yarn tsc:check-config"
   },
   "dependencies": {
     "@reduxjs/toolkit": "^1.4.0",
