feat: Use airbnb-typescript config for eslint

--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "dev:nohot": "yarn d:nohot",
     "dev": "yarn d",
     "lint:eslint:fix": "yarn lint:eslint --fix",
-    "lint:eslint": "eslint . --ext .js --ext .jsx --ext .ts --ext .tsx",
+    "lint:eslint": "eslint . --ext .js --ext .jsx --ext .ts --ext .tsx --max-warnings=0",
     "lint:fix": "yarn lint:eslint:fix && yarn lint:stylelint:fix",
     "lint:stylelint:fix": "yarn lint:stylelint --fix",
     "lint:stylelint": "stylelint '**/*.css' '**/*.scss' '**/*.pcss'",
@@ -37,6 +37,7 @@
     "tsc:check": "tsc --noEmit --incremental --skipLibCheck && yarn tsc:check-config"
   },
   "dependencies": {
+    "@babel/polyfill": "^7.11.5",
     "@reduxjs/toolkit": "^1.4.0",
     "classnames": "^2.2.6",
     "react": "^16.13.1",
@@ -53,7 +54,6 @@
     "@babel/plugin-proposal-class-properties": "^7.10.4",
     "@babel/plugin-proposal-object-rest-spread": "^7.11.0",
     "@babel/plugin-syntax-dynamic-import": "^7.8.3",
-    "@babel/polyfill": "^7.11.5",
     "@babel/preset-env": "^7.11.5",
     "@babel/preset-react": "^7.10.4",
     "@babel/preset-typescript": "^7.10.4",
@@ -71,13 +71,12 @@
     "@types/redux-mock-store": "^1.0.2",
     "@types/webpack": "^4.41.22",
     "@types/webpack-env": "^1.15.3",
-    "@typescript-eslint/eslint-plugin": "^4.4.0",
+    "@typescript-eslint/eslint-plugin": "^4.15.0",
     "@typescript-eslint/parser": "^4.4.0",
     "autoprefixer": "^10.0.1",
     "babel-eslint": "^10.1.0",
     "babel-jest": "^26.5.2",
     "babel-loader": "^8.1.0",
-    "circular-dependency-plugin": "^5.2.0",
     "compression-webpack-plugin": "^6.0.3",
     "connect-history-api-fallback": "^1.6.0",
     "cross-env": "^7.0.2",
@@ -86,6 +85,7 @@
     "enzyme": "^3.11.0",
     "enzyme-adapter-react-16": "^1.15.5",
     "eslint": "^7.11.0",
+    "eslint-config-airbnb-typescript": "^12.3.1",
     "eslint-config-prettier": "^6.12.0",
     "eslint-import-resolver-webpack": "^0.13.0",
     "eslint-plugin-import": "^2.22.1",
