--- a/package.json
+++ b/package.json
@@ -1,129 +1,6 @@
 {
-  "license": "MIT",
-  "name": "jsapp-boilerplate",
-  "version": "0.0.1",
-  "scripts": {
-    "analyze:bundle": "cross-env mkdir -p tmp && HIDE_CONFIG=true yarn --silent build:optimized --profile --json > dist/stats.json && webpack-bundle-analyzer dist/stats.json",
-    "build:github": "cross-env BUILD_CONFIG_FILE=./config/configValues.github.js APP_ENV=github yarn build:optimized",
-    "build:optimized": "cross-env NODE_ENV=production webpack --progress --config webpack.config.js --mode production",
-    "build:production": "cross-env APP_ENV=production yarn build:optimized",
-    "build": "webpack --progress --config webpack.config.js",
-    "c": "yarn lint && yarn test",
-    "ck": "yarn c",
-    "clean": "rm -rf dist",
-    "config:generate:docker": "node config/generateJson.js ./dist/config.json w",
-    "config:generate:dev": "node config/generateJson.js ./config.json w",
-    "config:generate:github": "cross-env CONFIG_FILE=./configValues.github.js node config/generateJson.js ./dist/config.json w",
-    "d:nohot": "cross-env NODE_ENV=development webpack-dev-server",
-    "d": "yarn config:generate:dev && cross-env NODE_ENV=development webpack-dev-server --hot",
-    "deploy:github": "yarn clean && yarn build:github && yarn deploy:github:prebuilt",
-    "dev:nohot": "yarn d:nohot",
-    "dev": "yarn d",
-    "lint:eslint:fix": "yarn lint:eslint --fix",
-    "lint:eslint": "eslint . --ext .js --ext .jsx --ext .ts --ext .tsx --max-warnings=0",
-    "lint:fix": "yarn lint:eslint:fix && yarn lint:stylelint:fix",
-    "lint:stylelint:fix": "yarn lint:stylelint --fix",
-    "lint:stylelint": "stylelint '**/*.css' '**/*.scss' '**/*.pcss'",
-    "lint": "yarn lint:eslint && yarn lint:stylelint && yarn tsc:check",
-    "run:docker": "docker-compose up --build",
-    "t:w": "jest --watch",
-    "t": "jest",
-    "test:coverage": "jest --coverage",
-    "test:docker": "docker-compose -f docker-compose.test.yml up --build",
-    "test:watch": "yarn t:w",
-    "test": "yarn t",
-    "tsc:check-config": "tsc config/configValues.js --noEmit --skipLibCheck --allowJs --checkJs --lib es2016",
-    "tsc:check:no-error": "tsc --noEmit --incremental --skipLibCheck || true",
-    "tsc:check": "tsc --noEmit --incremental --skipLibCheck && yarn tsc:check-config"
-  },
-  "dependencies": {
-    "@babel/polyfill": "^7.11.5",
-    "@reduxjs/toolkit": "^1.4.0",
-    "classnames": "^2.2.6",
-    "react": "^16.13.1",
-    "react-dom": "^16.13.1",
-    "react-helmet": "^6.1.0",
-    "react-redux": "^7.2.1",
-    "react-router": "^5.2.0",
-    "react-router-dom": "^5.2.0",
-    "redux": "^4.0.5",
-    "redux-thunk": "^2.2.0"
-  },
-  "devDependencies": {
-    "@babel/core": "^7.11.6",
-    "@babel/plugin-proposal-class-properties": "^7.10.4",
-    "@babel/plugin-proposal-object-rest-spread": "^7.11.0",
-    "@babel/plugin-syntax-dynamic-import": "^7.8.3",
-    "@babel/preset-env": "^7.11.5",
-    "@babel/preset-react": "^7.10.4",
-    "@babel/preset-typescript": "^7.10.4",
-    "@pmmmwh/react-refresh-webpack-plugin": "^0.4.2",
-    "@svgr/webpack": "^5.4.0",
-    "@types/classnames": "^2.2.10",
-    "@types/enzyme": "^3.10.7",
-    "@types/enzyme-adapter-react-16": "^1.0.6",
-    "@types/jest": "^26.0.14",
-    "@types/react": "^16.9.52",
-    "@types/react-dom": "^16.9.8",
-    "@types/react-helmet": "^6.1.0",
-    "@types/react-redux": "^7.1.9",
-    "@types/react-router-dom": "^5.1.6",
-    "@types/redux-mock-store": "^1.0.2",
-    "@types/webpack": "^4.41.22",
-    "@types/webpack-env": "^1.15.3",
-    "@typescript-eslint/eslint-plugin": "^4.15.0",
-    "@typescript-eslint/parser": "^4.4.0",
-    "autoprefixer": "^10.0.1",
-    "babel-eslint": "^10.1.0",
-    "babel-jest": "^26.5.2",
-    "babel-loader": "^8.1.0",
-    "compression-webpack-plugin": "^6.0.3",
-    "connect-history-api-fallback": "^1.6.0",
-    "cross-env": "^7.0.2",
-    "css-loader": "^4.3.0",
-    "cssnano": "^4.1.10",
-    "enzyme": "^3.11.0",
-    "enzyme-adapter-react-16": "^1.15.5",
-    "eslint": "^7.11.0",
-    "eslint-config-airbnb-typescript": "^12.3.1",
-    "eslint-config-prettier": "^6.12.0",
-    "eslint-import-resolver-webpack": "^0.13.0",
-    "eslint-plugin-import": "^2.22.1",
-    "eslint-plugin-jest": "^24.1.0",
-    "eslint-plugin-jsx-a11y": "^6.3.1",
-    "eslint-plugin-prettier": "^3.1.4",
-    "eslint-plugin-react": "^7.21.4",
-    "eslint-plugin-react-hooks": "^4.1.2",
-    "file-loader": "^6.1.0",
-    "html-webpack-plugin": "^4.5.0",
-    "jest": "^26.5.3",
-    "jest-fetch-mock": "^3.0.3",
-    "jest-transform-stub": "^2.0.0",
-    "postcss-loader": "^3.0.0",
-    "postcss-mixins": "^6.2.3",
-    "postcss-preset-env": "^6.7.0",
-    "postcss-reporter": "^6.0.1",
-    "preload-webpack-plugin": "^3.0.0-beta.4",
-    "prettier": "^2.1.2",
-    "prettier-eslint": "^11.0.0",
-    "react-refresh": "^0.8.3",
-    "redux-mock-store": "^1.5.4",
-    "style-loader": "^1.2.1",
-    "stylelint": "^13.7.2",
-    "stylelint-config-prettier": "^8.0.2",
-    "stylelint-prettier": "^1.1.2",
-    "typescript": "^4.0.3",
-    "webpack": "^5.0.0",
-    "webpack-bundle-analyzer": "^3.9.0",
-    "webpack-cli": "^3.3.12",
-    "webpack-dev-server": "^3.11.0",
-    "webpack-shell-plugin": "^0.5.0"
-  },
-  "resolutions": {
-    "//": "When yarn audit fails due to a child dependency, you can override versions here",
-    "elliptic": "6.5.3",
-    "http-proxy": ">=1.18.1",
-    "lodash": ">=4.17.19",
-    "serialize-javascript": ">=3.1.0"
-  }
+  "private": true,
+  "workspaces": [
+    "packages/*"
+  ]
 }
