--- a/.github/workflows/app.test.yml
+++ b/.github/workflows/app.test.yml
@@ -1,4 +1,4 @@
-name: CI
+name: App - CI
 
 on:
   pull_request:
@@ -16,4 +16,4 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - name: Test
-        run: docker build . --file Dockerfile.test.dockerfile
+        run: docker build . --file packages/app/Dockerfile.test.dockerfile
