--- a/package.json
+++ b/package.json
@@ -14,8 +14,8 @@
     "config:generate:docker": "node config/generateJson.js ./dist/config.json w",
     "config:generate:dev": "node config/generateJson.js ./config.json w",
     "config:generate:github": "cross-env CONFIG_FILE=./configValues.github.js node config/generateJson.js ./dist/config.json w",
-    "d:nohot": "cross-env NODE_ENV=development webpack-dev-server",
-    "d": "yarn config:generate:dev && cross-env NODE_ENV=development webpack-dev-server --hot",
+    "d:nohot": "cross-env NODE_ENV=development webpack serve",
+    "d": "yarn config:generate:dev && cross-env NODE_ENV=development webpack serve --hot",
     "deploy:github": "yarn clean && yarn build:github && yarn deploy:github:prebuilt",
     "dev:nohot": "yarn d:nohot",
     "dev": "yarn d",
@@ -40,6 +40,7 @@
     "@babel/polyfill": "^7.11.5",
     "@reduxjs/toolkit": "^1.4.0",
     "classnames": "^2.2.6",
+    "html-webpack-plugin": "^5.3.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-helmet": "^6.1.0",
@@ -57,7 +58,7 @@
     "@babel/preset-env": "^7.11.5",
     "@babel/preset-react": "^7.10.4",
     "@babel/preset-typescript": "^7.10.4",
-    "@pmmmwh/react-refresh-webpack-plugin": "^0.4.2",
+    "@pmmmwh/react-refresh-webpack-plugin": "^0.4.3",
     "@svgr/webpack": "^5.4.0",
     "@types/classnames": "^2.2.10",
     "@types/enzyme": "^3.10.7",
@@ -69,18 +70,18 @@
     "@types/react-redux": "^7.1.9",
     "@types/react-router-dom": "^5.1.6",
     "@types/redux-mock-store": "^1.0.2",
-    "@types/webpack": "^4.41.22",
-    "@types/webpack-env": "^1.15.3",
+    "@types/webpack": "^5.28.0",
+    "@types/webpack-env": "^1.16.0",
     "@typescript-eslint/eslint-plugin": "^4.15.0",
     "@typescript-eslint/parser": "^4.4.0",
     "autoprefixer": "^10.0.1",
     "babel-eslint": "^10.1.0",
     "babel-jest": "^26.5.2",
-    "babel-loader": "^8.1.0",
-    "compression-webpack-plugin": "^6.0.3",
+    "babel-loader": "^8.2.2",
+    "compression-webpack-plugin": "^8.0.0",
     "connect-history-api-fallback": "^1.6.0",
     "cross-env": "^7.0.2",
-    "css-loader": "^4.3.0",
+    "css-loader": "^5.2.6",
     "cssnano": "^4.1.10",
     "enzyme": "^3.11.0",
     "enzyme-adapter-react-16": "^1.15.5",
@@ -94,29 +95,28 @@
     "eslint-plugin-prettier": "^3.1.4",
     "eslint-plugin-react": "^7.21.4",
     "eslint-plugin-react-hooks": "^4.1.2",
-    "file-loader": "^6.1.0",
-    "html-webpack-plugin": "^4.5.0",
+    "file-loader": "^6.2.0",
     "jest": "^26.5.3",
     "jest-fetch-mock": "^3.0.3",
     "jest-transform-stub": "^2.0.0",
-    "postcss-loader": "^3.0.0",
+    "postcss-loader": "^5.3.0",
     "postcss-mixins": "^6.2.3",
     "postcss-preset-env": "^6.7.0",
     "postcss-reporter": "^6.0.1",
     "preload-webpack-plugin": "^3.0.0-beta.4",
     "prettier": "^2.1.2",
     "prettier-eslint": "^11.0.0",
-    "react-refresh": "^0.8.3",
+    "react-refresh": "^0.10.0",
     "redux-mock-store": "^1.5.4",
-    "style-loader": "^1.2.1",
+    "style-loader": "^2.0.0",
     "stylelint": "^13.7.2",
     "stylelint-config-prettier": "^8.0.2",
     "stylelint-prettier": "^1.1.2",
     "typescript": "^4.0.3",
-    "webpack": "^5.0.0",
-    "webpack-bundle-analyzer": "^3.9.0",
-    "webpack-cli": "^3.3.12",
-    "webpack-dev-server": "^3.11.0",
+    "webpack": "^5.38.1",
+    "webpack-bundle-analyzer": "^4.4.2",
+    "webpack-cli": "^4.7.0",
+    "webpack-dev-server": "^3.11.2",
     "webpack-shell-plugin": "^0.5.0"
   },
   "resolutions": {
