chore: Upgrade webpack, dev-server, typescript

--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "ck": "yarn c",
     "clean": "rm -rf dist",
     "config:generate:docker": "node config/generateJson.js ./dist/config.json w",
-    "config:generate:dev": "node config/generateJson.js ./config.json w",
+    "config:generate:dev": "node config/generateJson.js ./config/config.json w",
     "config:generate:github": "cross-env CONFIG_FILE=./configValues.github.js node config/generateJson.js ./dist/config.json w",
     "d:nohot": "cross-env NODE_ENV=development webpack-dev-server",
     "d": "yarn config:generate:dev && cross-env NODE_ENV=development webpack-dev-server --hot",
@@ -57,8 +57,8 @@
     "@babel/preset-env": "^7.11.5",
     "@babel/preset-react": "^7.10.4",
     "@babel/preset-typescript": "^7.10.4",
-    "@pmmmwh/react-refresh-webpack-plugin": "^0.4.2",
-    "@svgr/webpack": "^5.4.0",
+    "@pmmmwh/react-refresh-webpack-plugin": "^0.5.1",
+    "@svgr/webpack": "^5.5.0",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^12.1.0",
     "@types/classnames": "^2.2.10",
@@ -69,15 +69,15 @@
     "@types/react-redux": "^7.1.9",
     "@types/react-router-dom": "^5.1.6",
     "@types/redux-mock-store": "^1.0.2",
-    "@types/webpack": "^4.41.22",
-    "@types/webpack-env": "^1.15.3",
-    "@typescript-eslint/eslint-plugin": "^4.15.0",
-    "@typescript-eslint/parser": "^4.4.0",
+    "@types/webpack": "^5.28.0",
+    "@types/webpack-env": "^1.16.2",
+    "@typescript-eslint/eslint-plugin": "^4.31.1",
+    "@typescript-eslint/parser": "^4.31.1",
     "autoprefixer": "^10.0.1",
     "babel-eslint": "^10.1.0",
     "babel-jest": "^26.5.2",
     "babel-loader": "^8.1.0",
-    "compression-webpack-plugin": "^6.0.3",
+    "compression-webpack-plugin": "^9.0.0",
     "connect-history-api-fallback": "^1.6.0",
     "cross-env": "^7.0.2",
     "css-loader": "^4.3.0",
@@ -93,7 +93,7 @@
     "eslint-plugin-react": "^7.21.4",
     "eslint-plugin-react-hooks": "^4.1.2",
     "file-loader": "^6.1.0",
-    "html-webpack-plugin": "^4.5.0",
+    "html-webpack-plugin": "^5.3.2",
     "jest": "^26.5.3",
     "jest-fetch-mock": "^3.0.3",
     "jest-transform-stub": "^2.0.0",
@@ -104,17 +104,17 @@
     "preload-webpack-plugin": "^3.0.0-beta.4",
     "prettier": "^2.1.2",
     "prettier-eslint": "^11.0.0",
-    "react-refresh": "^0.8.3",
+    "react-refresh": "^0.10.0",
     "redux-mock-store": "^1.5.4",
     "style-loader": "^1.2.1",
     "stylelint": "^13.7.2",
     "stylelint-config-prettier": "^8.0.2",
     "stylelint-prettier": "^1.1.2",
-    "typescript": "^4.0.3",
-    "webpack": "^5.0.0",
-    "webpack-bundle-analyzer": "^3.9.0",
-    "webpack-cli": "^3.3.12",
-    "webpack-dev-server": "^3.11.0",
+    "typescript": "^4.4.3",
+    "webpack": "^5.53.0",
+    "webpack-bundle-analyzer": "^4.4.2",
+    "webpack-cli": "^4.8.0",
+    "webpack-dev-server": "^4.2.1",
     "webpack-shell-plugin": "^0.5.0"
   },
   "resolutions": {
