--- a/package.json
+++ b/package.json
@@ -37,7 +37,6 @@
     "tsc:check": "tsc --noEmit --incremental --skipLibCheck && yarn tsc:check-config"
   },
   "dependencies": {
-    "@babel/polyfill": "^7.11.5",
     "@reduxjs/toolkit": "^1.4.0",
     "classnames": "^2.2.6",
     "react": "^16.13.1",
@@ -50,13 +49,14 @@
     "redux-thunk": "^2.2.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.11.6",
-    "@babel/plugin-proposal-class-properties": "^7.10.4",
-    "@babel/plugin-proposal-object-rest-spread": "^7.11.0",
+    "@babel/core": "^7.15.5",
+    "@babel/plugin-proposal-class-properties": "^7.14.5",
+    "@babel/plugin-proposal-object-rest-spread": "^7.15.6",
     "@babel/plugin-syntax-dynamic-import": "^7.8.3",
-    "@babel/preset-env": "^7.11.5",
-    "@babel/preset-react": "^7.10.4",
-    "@babel/preset-typescript": "^7.10.4",
+    "@babel/preset-env": "^7.15.6",
+    "@babel/preset-react": "^7.14.5",
+    "@babel/preset-typescript": "^7.15.0",
+    "@babel/runtime-corejs3": "^7.15.4",
     "@pmmmwh/react-refresh-webpack-plugin": "^0.5.1",
     "@svgr/webpack": "^5.5.0",
     "@testing-library/jest-dom": "^5.14.1",
@@ -79,6 +79,7 @@
     "babel-loader": "^8.1.0",
     "compression-webpack-plugin": "^9.0.0",
     "connect-history-api-fallback": "^1.6.0",
+    "core-js": "^3.17.3",
     "cross-env": "^7.0.2",
     "css-loader": "^4.3.0",
     "cssnano": "^4.1.10",
